Fix alignment on sidebar author list

--- a/public_html/_assets/sass/main.sass
+++ b/public_html/_assets/sass/main.sass
@@ -538,6 +538,9 @@ aside
             margin: 0
             line-height: 1.2rem
 
+#sidebar-contributors
+    text-align: center
+
 .user-card
     .picture
         padding: 0 5px 5px
